<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="app.krys.bookspaceapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_uploadBookFragment"
            app:destination="@id/uploadBookFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="app.krys.bookspaceapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="app.krys.bookspaceapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/mySpaceFragment"
        android:name="app.krys.bookspaceapp.ui.myspace.MySpaceFragment"
        android:label="My Space"
        tools:layout="@layout/fragment_my_space" />
    <fragment
        android:id="@+id/uploadBookFragment"
        android:name="app.krys.bookspaceapp.ui.upload.UploadBookFragment"
        android:label="Upload a book"
        tools:layout="@layout/fragment_upload_book" />
    <fragment
        android:id="@+id/nav_account_settings"
        android:name="app.krys.bookspaceapp.ui.account.settings.AccountSettingsFragment"
        android:label="@string/menu_account_settings"
        tools:layout="@layout/fragment_account_settings" />
</navigation>