<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.account.settings.LogoutDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        android:id="@+id/content_container">

        <TextView
            android:id="@+id/confirm_logout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_16"
            android:padding="@dimen/margin_8"
            android:text="@string/confirm_log_out"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/logout_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/margin_8"
            android:textSize="16sp"
            android:text="@string/confirm_action" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginBottom="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/no"
                android:textStyle="bold"
                android:textColor="@color/blue_accent"
                android:contentDescription="@string/cancel_action_button"
                android:padding="4dp"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/logout_action_button"
                android:padding="4dp"
                android:textColor="@color/blue_accent"
                tools:ignore="RelativeOverlap,TouchTargetSizeCheck" />

        </RelativeLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>