<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.settings.ResetPasswordDialogFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        android:id="@+id/content_container">

        <TextView
            android:id="@+id/reset_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/margin_8"
            android:text="RESET PASSWORD"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginBottom="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/cancel_button"
                android:textColor="@color/blue_accent"
                android:contentDescription="@string/cancel_action_button"
                android:padding="4dp"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/send_email_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_button"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/action_send_email_button"
                android:padding="4dp"
                android:textColor="@color/blue_accent"
                tools:ignore="RelativeOverlap,TouchTargetSizeCheck" />

        </RelativeLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="411dp"
        android:layout_height="122dp"
        android:padding="@dimen/margin_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/content_container"
        app:layout_constraintTop_toTopOf="@+id/content_container"
        app:layout_constraintVertical_bias="0.427"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>