<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="book"
            type="app.krys.bookspaceapp.data.model.BookInfo" />
        <variable
            name="bookImageUrl"
            type="String" />
    </data>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="120dp"
        android:layout_height="190dp"
        android:elevation="6dp"
        app:strokeColor="@color/black"
        app:cardCornerRadius="4dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/book_imageV"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:contentDescription="@string/book_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/placeholder_book_img"
                app:bookImage="@{bookImageUrl}"/>

            <TextView
                android:id="@+id/book_name_tv"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_bold"
                android:maxLines="1"
                tools:text="@string/placeholder_book_name_text"
                android:textColor="@color/black"
                tools:textSize="13sp"
                android:text="@{book.bookName}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book_imageV" />

            <TextView
                android:id="@+id/book_author_tv"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/roboto"
                android:maxLines="1"
                tools:text="@string/placeholder_author_text"
                android:text="@{book.author}"
                android:textColor="@color/blue_accent"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book_name_tv" />

            <TextView
                android:id="@+id/item_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/pdf"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>

